[package]
name = "vinox-voxel-formats"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ahash = "0.8.3"
mint = { version = "0.5.9", features = ["serde"] }
ron = "0.8.0"
serde = "1.0.166"
bincode = "1.3.3"
vinox_voxel = { git = "https://github.com/vixeliz/vinox_voxel" }
image = "0.24.6"
glam = { version = "0.24.1", features = ["mint"] }
texture_packer = "0.25.0"
ndshape = "0.3.0"

